--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,27 @@ body {
   border-bottom: 6px solid transparent;
   border-left: 6px solid black; /* Match the border color */
 }
+
+.dropdown-content {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out, opacity 0.4s ease-in-out;
+}
+
+.dropdown-content.open {
+  max-height: 500px; /* Adjust this value based on the expected height of the content */
+  opacity: 1;
+}
+
+.dropdown-content2 {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.dropdown-content2.open {
+  max-height: 500px; /* Adjust this value based on the expected height of the content */
+  opacity: 1;
+}
